# Robotics-Course

./: README.md
VectorManipulator/ros/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
VectorManipulator/ros/src/ros_assignment_1/: CMakeLists.txt
VectorManipulator/ros/src/ros_assignment_1/msg/: VectorInput.msg
VectorManipulator/ros/src/ros_assignment_1/src/: listener.cpp  talker.cpp
arm_ws/devel/include/arm_lib/: Angles.h
arm_ws/devel/lib/pkgconfig/: arm_gazebo.pc  arm_lib.pc
arm_ws/src/arm_description/model/: model.config
arm_ws/src/arm_description/models/: model.sdf
arm_ws/src/arm_gazebo/: CMakeLists.txt
arm_ws/src/arm_gazebo/scripts/: forwardk.py
arm_ws/src/arm_gazebo/src/: arm_controller.cpp  grippercontroller.cpp
arm_ws/src/arm_gazebo/worlds/: arm.world
arm_ws/src/arm_lib/: CMakeLists.txt
arm_ws/src/arm_lib/msg/: Angles.msg  gripper.msg
arm_ws/src/arm_srv/: CMakeLists.txt  package.xml
arm_ws/src/arm_srv/srv/: ik.srv
bonus/bonus/devel/: .catkin
bonus/src/arm_description/model/: robot_arm.sdf
bonus/src/arm_gazebo/: CMakeLists.txt
bonus/src/arm_lib/: CMakeLists.txt  package.xml
bonus/src/arm_srv/srv/: fk.srv
src/arm_description/model/: robot_arm.sdf
src/arm_description/models/: model.config  model.sdf
src/arm_gazebo/: CMakeLists.txt  package.xml
src/arm_gazebo/launch/: arm.launch
src/arm_gazebo/scripts/: bash.sh  forwardk.py  inversek.py
src/arm_gazebo/src/: arm_controller.cpp  grippercontroller.cpp  tempCodeRunnerFile.cpp
src/arm_gazebo/worlds/: arm.world
src/arm_lib/: CMakeLists.txt  package.xml
(+47 files in other folders)
